chore: remove dynamic attribute on non-primary dimension